HFP-270 Added correct spacing for info on dragndrop.

--- a/H5PEditor.DragQuestion.css
+++ b/H5PEditor.DragQuestion.css
@@ -287,3 +287,7 @@ a.h5peditor-fd-button.h5peditor-remove:hover {
   background-color: #fff;
   padding: 20px;
 }
+
+.h5p-dragquestion-editor .h5p-dragnbar-li:hover:before {
+  top: 44px;
+}
